# light-controller

./: .gitignore  Cargo.toml
default_profile/: Cargo.toml
default_profile/src/: lib.rs
lights/: Cargo.toml
lights/src/: lib.rs  lighting_system.rs  utils.rs
lights/src/managers/: light_manager.rs  mod.rs  profile_manager.rs
lights/src/structs/: color.rs  light_primitive.rs  light_types.rs  mod.rs  profile.rs
profiles/basic-pattern/: Cargo.toml
profiles/basic-pattern/src/: lib.rs
profiles/test2/: Cargo.toml
profiles/test2/src/: lib.rs
src/: main.rs
