[package]
name = "lights"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libloading = "0.7.4"
fs_extra = "1.3.0"
toml_edit = "0.19.7"
log = "0.4.17"
env_logger = "0.10.0"
serde_json = "1.0"
rand = "0.8.5"
colored = "2.0.0"

[lib]
crate-type = ["cdylib", "rlib"]